--- a/BlackJack/BlackJack.vcxproj
+++ b/BlackJack/BlackJack.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Card.h" />
     <ClInclude Include="Dealer.h" />
     <ClInclude Include="Deck.h" />
     <ClInclude Include="Player.h" />
