--- a/BlackJack/BlackJack.vcxproj.filters
+++ b/BlackJack/BlackJack.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Dealer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Card.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
